tests/local_ptr_maybe_uninit_bad.stderr
tests/local_ptr_maybe_uninit_bad.hop:6:10: error: HOP2098: pointer/reference variable 'x' may be uninitialized
