tests/local_ptr_maybe_uninit_bad.hop
fn f(cond bool, y *int) int {
	var x *int
	if cond {
		x = y
	}
	return *x
}
